--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!doctype html><html lang="en"><head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>NOVA · Welcome</title>
-<link rel="stylesheet" href="assets/css/style.css"/>
-</head><body>
+<link rel="stylesheet" href="assets/css/style.css"/></head><body>
 <div class="wrap">
   <div class="hero card">
     <div>
