--- a/reflection.html
+++ b/reflection.html
@@ -5,13 +5,21 @@
 <link rel="stylesheet" href="assets/css/style.css"/></head><body>
 <div class="wrap">
   <h1>Reflection</h1>
-  <p class="small">Purpose grows where you plant action. Choose one box and write one step you’ll take in the next 7 days.</p>
+  <div class="card">
+    <p class="small"><b>Why this step matters:</b> Purpose doesn’t arrive fully formed—it grows when you take the next faithful step. Choose one focus below and commit to a single action in the next 7 days. Small steps compound into direction.</p>
+  </div>
   <div class="grid">
     <div class="card"><h2>Starting Out</h2><p class="small">New to the field? Identify one skill to learn and one person to ask for guidance this week.</p></div>
     <div class="card"><h2>Switching</h2><p class="small">What skills from your past role transfer here? Note two bridge skills you already have.</p></div>
     <div class="card"><h2>Leveling Up</h2><p class="small">List one certification or project that would raise your ceiling in the next 60 days.</p></div>
     <div class="card"><h2>Restarting</h2><p class="small">Ease back in. Name one low-risk, high-confidence step you can take this week.</p></div>
   </div>
-  <div class="bar"><a class="btn" href="index.html">Back to Welcome</a></div>
+  <div class="card center">
+    <p class="small"><b>You’ve reflected on where you are. Now it’s time to invest in who you’re becoming.</b></p>
+  </div>
+  <div class="bar">
+    <a class="btn" href="index.html">Back to Welcome</a>
+    <a class="btn" href="invest.html">Next: Invest in Yourself →</a>
+  </div>
 </div>
 </body></html>
