--- a/invest.html
+++ b/invest.html
@@ -39,7 +39,18 @@
       </ul>
       <a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Choose Mastery</a>
     </div>
+  
+  <div class="card" style="margin-top:14px">
+    <h2>The Purpose Book (One‑Time)</h2>
+    <p class="small">A concise field guide to live out what Nova revealed. Includes a 30‑day prompt journal, reflection pages, and practical exercises to move from clarity to action.</p>
+    <ul class="small">
+      <li>30 days of guided prompts</li>
+      <li>Weekly check‑ins & reflection templates</li>
+      <li>Examples and stories to build confidence</li>
+    </ul>
+    <a class="paybtn" href="https://payhip.com/" target="_blank" rel="noopener">Get the Purpose Book</a>
   </div>
+
   <div class="bar">
     <a class="btn" href="reflection.html">← Back to Reflection</a>
     <a class="btn" href="index.html">Return to Nova Home</a>
